# project-3dv

./: .gitignore  eval_full.json  eval_results.json  eval_seqs.json  eval_single.json  perception  pyproject.toml  sq_shape_classifier.pkl  sq_shape_library.json  vis.py
perception/: REPORT.md  __init__.py  grasp_from_sq.py  paths.py  pipeline.py  pyproject.toml  superdec_fitter.py  superdec_utils.py  superquadric.py
perception/evaluation/: eval_sq_octscenes.py  test_full_pipeline.py  visualize_sq_fits_octscenes.py
perception/outputs/: sq_scene005.npz  sq_scene005.ply
perception/scripts/: evaluate_superdec.py  isaacsim_tabletop_planner.py  node_wrapper_check.py  process_own_scan.py  run_evaluate_superdec.sh  run_gpu.sh  run_ocid_chamfer.sh  run_on_frame.py  run_on_frame.sh  run_on_frame_chamfer.sh  run_process_own_scan.sh  run_process_own_scan_fixed.sh  run_process_own_scan_singleframe.sh  run_simulation.py  run_simulation.sh  run_synth1_chamfer.sh  run_toscene_chamfer.sh  smoke_test_pipeline.py  test_api_stability.py  test_curobo_integration.py  test_on_superdec_split.py  test_pipeline_ocid.py  test_pipeline_single_view.py
perception/tests/: conftest.py
perception/tests/perception/: test_instance_segmentation.py  test_pipeline_integration.py  test_pipeline_on_ocid.py  test_preprocessing.py  test_rgbd_scenes.py  test_sq_fitting.py  test_sq_improvements.py  test_table_removal.py
perception/tests/planning/: test_curobo_integration.py
perception/visualisation/: visualize_sq.py
scripts/: evaluate_superdec.py  isaacsim_tabletop_planner.py  process_own_scan.py  (+8 more)
(+24 files in other folders)
